WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205321
[cairo] text-align:justify layouts texts wrongly for complex texts
https://bugs.webkit.org/show_bug.cgi?id=205321
Summary
[cairo] text-align:justify layouts texts wrongly for complex texts
Fujii Hironori
Reported
2019-12-16 19:27:04 PST
In Source/WebCore/platform/graphics/cairo/FontCairoHarfbuzzNG.cpp, canExpandAroundIdeographsInComplexText return false.
> bool FontCascade::canExpandAroundIdeographsInComplexText() > { > return false; > }
However, ComplexTextController doesn't take it into account. fast/text/justify-ideograph-complex.html is a test case.
Attachments
justify-ideograph-complex-actual.png
(177.13 KB, image/png)
2019-12-16 19:28 PST
,
Fujii Hironori
no flags
Details
Patch
(1.22 MB, patch)
2019-12-16 20:19 PST
,
Fujii Hironori
cgarcia
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-12-16 19:28:28 PST
Created
attachment 385847
[details]
justify-ideograph-complex-actual.png
Fujii Hironori
Comment 2
2019-12-16 19:49:18 PST
The tests and code have come from
Bug 53184
.
Fujii Hironori
Comment 3
2019-12-16 20:19:43 PST
Created
attachment 385849
[details]
Patch
Carlos Garcia Campos
Comment 4
2019-12-17 00:50:56 PST
Comment on
attachment 385849
[details]
Patch Thanks!
Fujii Hironori
Comment 5
2019-12-17 18:19:07 PST
Committed
r253664
: <
https://trac.webkit.org/changeset/253664
>
Radar WebKit Bug Importer
Comment 6
2019-12-17 18:20:35 PST
<
rdar://problem/58029006
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug