[cairo] text-align:justify wrongly expands CJK ideograph characters https://bugs.webkit.org/show_bug.cgi?id=205321

Patch by Fujii Hironori <fujii.hironori@gmail.com> on 2019-12-17
Reviewed by Carlos Garcia Campos.

Source/WebCore:

Even though canExpandAroundIdeographsInComplexText of
FontCairoHarfbuzzNG.cpp returns false, ComplexTextController
doesn't take it account. It ends up to expanding all ideographs
with a undesired expansion width.

WidthIterator properly checks canExpandAroundIdeographsInComplexText.
ComplexTextController also should do so.

* platform/graphics/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances): Check canExpandAroundIdeographsInComplexText.
* platform/graphics/FontCascade.h: Friend with ComplexTextController to allow calling canExpandAroundIdeographsInComplexText.

LayoutTests:

* platform/gtk/TestExpectations:
* platform/gtk/fast/text/justify-ideograph-complex-expected.png:
* platform/gtk/fast/text/justify-ideograph-complex-expected.txt: Added.
* platform/gtk/fast/text/justify-ideograph-leading-expansion-expected.png:
* platform/gtk/fast/text/justify-ideograph-simple-expected.png:
* platform/gtk/fast/text/justify-ideograph-simple-expected.txt: Added.
* platform/gtk/fast/text/justify-ideograph-vertical-expected.png:

Canonical link: https://commits.webkit.org/218568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253664 268f45cc-cd09-0410-ab3c-d52691b4dbfc